test/data/golden/fail/borrow_in_body.sv0
fn main() -> unit {
  let x: i32 = 1;
  let y: i32 = 2;
  let _b = &x;
}
